# fastestfurs_admin

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
ffva/: __init__.py  admin.py  auth.py  main.py
ffva/templates/: admin.html  base.html  index.html  profile.html  stream.html
