[tool.poetry]
name = "ffva"
version = "0.1.0"
description = "Fastest Furs Viewer & Administration"
authors = ["SarthTheSnek <34319569+SarthTheSnek@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
Flask-Discord = "^0.1.64"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
